--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-submit-ios:
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     env:
       EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       EXPO_APPLE_APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.ASC_API_KEY_ID }}
@@ -29,55 +29,13 @@ jobs:
         with:
           version: 8
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Install EAS CLI and login
         run: |
           npm install -g eas-cli
           eas whoami
-
-      - name: Install CocoaPods
-        run: |
-          sudo gem install cocoapods -v 1.16.2
-          pod --version
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Setup credentials from secrets
-        env:
-          IOS_DIST_P12_BASE64: ${{ secrets.IOS_DIST_P12_BASE64 }}
-          IOS_APPSTORE_PROFILE_BASE64: ${{ secrets.IOS_APPSTORE_PROFILE_BASE64 }}
-        run: |
-          mkdir -p credentials
-          echo "$IOS_DIST_P12_BASE64" | base64 -D > credentials/dist-cert.p12
-          echo "$IOS_APPSTORE_PROFILE_BASE64" | base64 -D > credentials/appstore.mobileprovision
-          # Validate profile type (App Store should NOT include ProvisionedDevices)
-          security cms -D -i credentials/appstore.mobileprovision > /tmp/appstore.plist
-          /usr/libexec/PlistBuddy -c "Print :ProvisionedDevices" /tmp/appstore.plist && exit 1 || true
-          ls -la credentials/
-
-      - name: Generate iOS native code
-        run: |
-          rm -rf ios
-          npx expo prebuild --platform ios --clean
-          cd ios
-          pod install --repo-update
-          cd ..
-
-      - name: Create credentials.json
-        env:
-          IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
-        run: |
-          cat > credentials.json <<EOF
-          {
-            "ios": {
-              "provisioningProfilePath": "credentials/appstore.mobileprovision",
-              "distributionCertificate": {
-                "path": "credentials/dist-cert.p12",
-                "password": "$IOS_DIST_P12_PASSWORD"
-              }
-            }
-          }
-          EOF
 
       - name: Configure App Store Connect API key
         env:
@@ -87,7 +45,7 @@ jobs:
           echo "$ASC_API_KEY_P8_BASE64" | base64 -d > "private_keys/AuthKey_${{ secrets.ASC_API_KEY_ID }}.p8"
 
       - name: Build iOS (TestFlight)
-        run: eas build --platform ios --profile testflight --local --non-interactive --output=./RadarTinder.ipa
+        run: eas build --platform ios --profile testflight --non-interactive
 
       - name: Submit to TestFlight
-        run: eas submit --platform ios --profile testflight --non-interactive --path ./RadarTinder.ipa
+        run: eas submit --platform ios --profile testflight --non-interactive --latest
